[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
memmap2 = "0.5.8"
scan_fmt = "0.2.6"
text_io = "0.1.12"
lazy_static = "1.4.0"
petgraph = "0.6.2"
serde_json = "1.0"
image = "0.24.5"
itertools = "0.10.5"
